Bug 246089 - Unreviewed, drop assertion in ScreenOrientationProvider::platformStopListeningForChanges()
Summary: Unreviewed, drop assertion in ScreenOrientationProvider::platformStopListenin...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebCore Misc. (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Chris Dumez
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2022-10-05 09:19 PDT by Chris Dumez
Modified: 2022-10-05 09:27 PDT (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Chris Dumez 2022-10-05 09:19:32 PDT
Drop assertion in ScreenOrientationProvider::platformStopListeningForChanges() to make the bots happy while I investigate.
Comment 1 Radar WebKit Bug Importer 2022-10-05 09:19:48 PDT
<rdar://problem/100810458>
Comment 2 EWS 2022-10-05 09:27:24 PDT
Committed 255174@main (8816ee5611cc): <https://commits.webkit.org/255174@main>

Reviewed commits have been landed. Closing PR #5036 and removing active labels.