Unreviewed, drop assertion in ScreenOrientationProvider::platformStopListeningForChanges() https://bugs.webkit.org/show_bug.cgi?id=246089 rdar://100810458

* Source/WebCore/platform/ios/ScreenOrientationProviderIOS.mm:
(WebCore::ScreenOrientationProvider::platformStopListeningForChanges):

Canonical link: https://commits.webkit.org/255174@main